// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketCategory component should be null if not development 1`] = `null`;

exports[`TicketCategory component should display categories 1`] = `
<div
  className="d-inline-flex align-items-center flex-wrap hidden-sm-down"
>
  <ButtonDropdown
    id="ticket-category"
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      color="info"
      data-toggle="dropdown"
      size="sm"
    >
      <i
        aria-hidden="true"
        className="fa fa-truck"
      />
       
      Delivery status
    </DropdownToggle>
    <DropdownMenu
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        Ticket category (beta)
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-truck"
        />
         
        Delivery status
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-ban"
        />
         
        Cancel order
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-undo"
        />
         
        Return
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        tag="button"
        toggle={true}
      >
        Clear category
      </DropdownItem>
    </DropdownMenu>
  </ButtonDropdown>
   
</div>
`;

exports[`TicketCategory component should display categories 2`] = `
<div
  className="d-inline-flex align-items-center flex-wrap hidden-sm-down"
>
  <ButtonDropdown
    id="ticket-category"
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      color="info"
      data-toggle="dropdown"
      size="sm"
    >
      <i
        aria-hidden="true"
        className="fa fa-ban"
      />
       
      Cancel order
    </DropdownToggle>
    <DropdownMenu
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        Ticket category (beta)
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-truck"
        />
         
        Delivery status
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-ban"
        />
         
        Cancel order
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-undo"
        />
         
        Return
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        tag="button"
        toggle={true}
      >
        Clear category
      </DropdownItem>
    </DropdownMenu>
  </ButtonDropdown>
   
</div>
`;

exports[`TicketCategory component should display categories 3`] = `
<div
  className="d-inline-flex align-items-center flex-wrap hidden-sm-down"
>
  <ButtonDropdown
    id="ticket-category"
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      color="info"
      data-toggle="dropdown"
      size="sm"
    >
      <i
        aria-hidden="true"
        className="fa fa-undo"
      />
       
      Return
    </DropdownToggle>
    <DropdownMenu
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        Ticket category (beta)
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-truck"
        />
         
        Delivery status
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-ban"
        />
         
        Cancel order
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-undo"
        />
         
        Return
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        tag="button"
        toggle={true}
      >
        Clear category
      </DropdownItem>
    </DropdownMenu>
  </ButtonDropdown>
   
</div>
`;

exports[`TicketCategory component should display categories 4`] = `
<div
  className="d-inline-flex align-items-center flex-wrap hidden-sm-down"
>
  <ButtonDropdown
    id="ticket-category"
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      color="info"
      data-toggle="dropdown"
      size="sm"
    >
      <i
        aria-hidden="true"
        className="fa fa-magic"
      />
       
      unknown-category
    </DropdownToggle>
    <DropdownMenu
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        Ticket category (beta)
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-truck"
        />
         
        Delivery status
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-ban"
        />
         
        Cancel order
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-undo"
        />
         
        Return
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        tag="button"
        toggle={true}
      >
        Clear category
      </DropdownItem>
    </DropdownMenu>
  </ButtonDropdown>
   
</div>
`;

exports[`TicketCategory component should display empty dropdown 1`] = `
<div
  className="d-inline-flex align-items-center flex-wrap hidden-sm-down"
>
  <ButtonDropdown
    id="ticket-category"
    isOpen={false}
    toggle={[Function]}
  >
    <DropdownToggle
      aria-haspopup={true}
      caret={true}
      color="info"
      data-toggle="dropdown"
      size="sm"
    >
      <i
        aria-hidden="true"
        className="fa fa-magic"
      />
       
    </DropdownToggle>
    <DropdownMenu
      tag="div"
    >
      <DropdownItem
        header={true}
        tag="button"
        toggle={true}
      >
        Ticket category (beta)
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-truck"
        />
         
        Delivery status
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-ban"
        />
         
        Cancel order
      </DropdownItem>
      <DropdownItem
        className="dropdown-item-input"
        onClick={[Function]}
        tag="button"
        toggle={true}
      >
        <i
          aria-hidden="true"
          className="fa fa-undo"
        />
         
        Return
      </DropdownItem>
      <DropdownItem
        divider={true}
        tag="button"
        toggle={true}
      />
      <DropdownItem
        tag="button"
        toggle={true}
      >
        Clear category
      </DropdownItem>
    </DropdownMenu>
  </ButtonDropdown>
   
</div>
`;
